adding hands-on

--- a/current/index.html
+++ b/current/index.html
@@ -69,7 +69,7 @@
                 </div>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="index.html" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="index.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Current Topics
                 </a>
                 <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
@@ -115,6 +115,15 @@
 
             <h2 class="section-heading">Explanation of the Current Topics</h2>
             <p>For the Current Topics topics, we explored the different aspects of Web Technologies, such as what is UTF, HTTPS, etc. We also covered such as who we are, how to install git on our computers to push our code/markdown files to Github, among other things. Overall, they helped with discovering where the web is, and what is in the future. I enjoyed this section, as it helped put context in to why we should learn about the web, and who we were taking the classes with. The section also helped in seeing the different levels of understanding that our fellow classmates were at. </p>
+            <h3>Here are the topics:</h3>
+            <p><a href="week1.html">Week 1 - Hello World!</a></p>
+            <p><a href="week2.html">Week 2 - Learn++ and HTTPS</a></p>
+            <p><a href="week3.html">Week 3 - Git, Command Line, and Microsoft</a></p>
+            <p><a href="week4.html">Week 4 - UTF8 and Web 2.0</a></p>
+            <p><a href="week5.html">Week 5 - Semantic Versioning and Project 0 (Draft)</a></p>
+            <p><a href="week6.html">Week 6 - Bootstrap Template and FTP!</a></p>
+            <p><a href="week7.html">Week 7 - Front-end Framework and Images!</a></p>
+            <p><a href="week8.html">Week 8 - Payment Gateway and Web Dev Builds</a></p>
           </div>
         </div>
       </div>
