--- a/handson/week1.html
+++ b/handson/week1.html
@@ -99,7 +99,6 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
               <h1>CIT 82 - Hands-On Week 1</h1>
-              <span class="subheading">Markdown</span>
             </div>
           </div>
         </div>
@@ -112,9 +111,12 @@
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
 
-            <h2 class="section-heading">Heading</h2>
+            <h2 class="section-heading">Markdown</h2>
+            <p>We learned how to take notes in Markdown, a type of structure for writing things out for Github. Here is what I wrote on my post:</p>
 
-            <p>Placeholder text </p>
+            <p><a href="https://github.com/CIT82/douglasl_public/blob/master/day.md">My day.md</a><br>
+
+              Assignment wasn't too difficult. I don't have too much experience with github so far, so I did find the lecture, cheat sheet, and this video to be pretty helpful. Creating an account wasn't too difficult, but just understanding how to do markdown was interesting. My days tend to be pretty routine with work, though every day at my job is different, which helps me get through the week. The classes at City will help cure some of the routine. Cheers.</p>
           </div>
         </div>
       </div>
