--- a/handson/week2.html
+++ b/handson/week2.html
@@ -99,7 +99,6 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
               <h1>CIT 82 - Hands-On Week 2</h1>
-              <span class="subheading">HTTP and Github Pages</span>
             </div>
           </div>
         </div>
@@ -112,9 +111,13 @@
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
 
-            <h2 class="section-heading">Heading</h2>
-
-            <p>Placeholder text </p>
+            <h2 class="section-heading">HTTP and Github Pages</h2>
+            <p>For Week 2, we compared two different websites and analyzed their code. Then we created a github repo for this website.</p>
+            <h3>HTTP</h3>
+            <p><img src="https://raw.githubusercontent.com/CIT82/douglasl_public/master/img/Website%20Compare.jpg" width="925" height="1000" />I'm a news junkie and chose to compare the Washington Post and New York Times websites. They both have a lot of text, images, and advertisements within them. They both loaded relatively quickly, though they were continuing to load content as I scrolled around. The WP did have quite a few more requests, and both use the Secure HTTP protocol. As they are both primarily text-based content, the websites did not need to load up too much data, though that can change as you navigate the sites a bit.</p>
+            <h3>Github Pages</h3>
+            <p><a href="https://dloera.github.io/">My github site</a></p>
+            <p>My brother came up with an interesting idea a few years ago that I thought was interesting. While I'm not particularly into sports, he has been a lifelong fan of every sport that is popular here in America. The idea was to create an app where you can add all of your fantasy sports teams so that they are all in one area. As many Fantasy Sports players often have multiple leagues that they play, which would help keep track of them all. The idea would be that you have to use the APIs from all of the different sites so that you can pull all the data into one common location to check the scores of all of them at once, rather than having to check each one individually. I've never researched as to whether this actually exists, but thought it was a good idea.</p>
           </div>
         </div>
       </div>
