--- a/handson/week3.html
+++ b/handson/week3.html
@@ -99,7 +99,6 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
               <h1>CIT 82 - Hands-On Week 3</h1>
-              <span class="subheading">Editor and Github Repos</span>
             </div>
           </div>
         </div>
@@ -111,10 +110,14 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
-
-            <h2 class="section-heading">Heading</h2>
-
-            <p>Placeholder text </p>
+            <h2 class="section-heading">Editor and Github Repos</h2>
+            <p>For Week 3 in the Hands-on Assignment, we selected what editor we were going to use for our code and how to get our github repos on our personal computers. Here is what I wrote for my topics:</p>
+            <h3>Select your Editor</h3>
+            <p><img src="https://raw.githubusercontent.com/CIT82/douglasl_public/master/img/editor.jpg" width="713" height="537" /></p>
+            <p>I chose VScode, as we are already using it in CIT93 and the formatting on it I enjoy. While there are many editors that I'm sure are easier, this one I already have and don't see the point of using another. I haven't used HTML5 before, so I am relatively new, and figure this editor is free to use.</p>
+            <h3>Github Repos</h3>
+            <p>Here is my screenshot, was pretty simple, though I found out that I named my private repo without my last name initial.</p>
+            <p><img src="https://raw.githubusercontent.com/CIT82/douglasl_public/master/img/git%20clone.jpg" width="344" height="207" /><img src="https://raw.githubusercontent.com/CIT82/douglasl_public/master/img/git%20other.jpg" width="422" height="139" /></p>
           </div>
         </div>
       </div>
