--- a/handson/week4.html
+++ b/handson/week4.html
@@ -99,7 +99,6 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
               <h1>CIT 82 - Hands-On Week 4</h1>
-              <span class="subheading">Git Workflow and CSS Pages</span>
             </div>
           </div>
         </div>
@@ -111,10 +110,14 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
-
-            <h2 class="section-heading">Heading</h2>
-
-            <p>Placeholder text </p>
+            <h2 class="section-heading">Git Workflow and CSS Pages</h2>
+            <p>For Week 4 in Hands-on, we discussed how to add/commit/push our Github repos from the repos that we work with on our personal computers to our repos on the github servers, and then added CSS to our webpages, though it looks much different now.</p>
+            <h3>Git Workflow:</h3>
+            <p><img src="https://raw.githubusercontent.com/CIT82/douglasl_public/master/img/git%20commits.jpg" width="621" height="333" /></p>
+            <p>I haven't had any problem with updating my repos with git through the terminal. I have a bit of experience with using the terminal over the years, so doing it isn't anything new, just learning the commands is new, which seem pretty straight forward. Add the file(s), commit it, then push the file to GitHub, though I did run into a brief issue sending the image above to my public folder due to not updating it. Did a quick git pull to update my local files, then a push to send it over so that I can embed the image in this reply. I enjoy having the terminal directly in VS code, but have no problem using the command prompt in windows as well. A git command is able to be used directly in the command prompt, and the only difference from the Git Bash is that it isn't colored.</p>
+            <h3>Add CSS Pages</h3>
+            <p><a class="" title="Link" href="https://dloera.github.io/" data-preview-alt="">Website</a></p>
+            <p>The video for the CSS went extremely quickly, and I had somewhat of a trouble keeping up, but everything he did made sense as to what it did on the website. I did find it to be very helpful in learning the structure of how HTML and CSS work, so it was pretty helpful. I've never used CSS before, so this was brand new for me. I wasn't exactly sure how extensive to try to create the website. I created a header, a footer, a list, and had both a colored background along with an image of me in Seattle in May 2015 as a background. I originally had the picture behind the color, but was able to figure out that order matters. Wasn't too sure what else to do in creating the site, but considering it was the first one I've ever written by hand, it's what I got. Thanks.</p>
           </div>
         </div>
       </div>
