--- a/handson/week5.html
+++ b/handson/week5.html
@@ -99,7 +99,6 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
               <h1>CIT 82 - Hands-On Week 5</h1>
-              <span class="subheading">Bootstrap, .gitignore, and Branching</span>
             </div>
           </div>
         </div>
@@ -111,10 +110,14 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
-
-            <h2 class="section-heading">Heading</h2>
-
-            <p>Placeholder text </p>
+            <h2 class="section-heading">Bootstrap, .gitignore, and Branching</h2>
+            <p>For Hands-on in week 5, we went over adding Bootstrap to our websites, adding a .gitignore file to our repos, and github branching </p>
+            <h3>Bootstrap update and git ignore:</h3>
+            <p><a href="https://dloera.github.io/">Link</a>, the video went very quickly and didn't cover much, in my opinion, so I wasn't able to get too many improvements on my website. However it did seem a bit more intuitive, so that helped a lot. I've never used bootstrap before, as designing websites is relatively new to me. It seems pretty interesting having all of the classes already defined, I just have to learn more about them. Here is my gitignore, I did put it in all of my repos, I am just showing my private repo:</p>
+            <p><img src="https://raw.githubusercontent.com/CIT82/douglasl_public/master/img/gitignore.jpg" width="489" height="162" /></p>
+            <h3>Git Branch:</h3>
+            <p><img src="https://raw.githubusercontent.com/CIT82/douglasl_public/master/img/git%20branch.jpg" width="605" height="325" /></p>
+            <p>I created a branch called "hands-on" and changed my day.md along with adding my image above. It was pretty interesting, it makes sense why you would want to do this to test things out without changing the original code. I am really liking github the more that we use it. It is really interesting. I didn't have too much difficulty with it, but I find it extremely fascinating. You just have to make sure that you are on the correct branch when making changes, otherwise things might get a little confusing. Fortunately, github also keeps track of the changes in the commits, which is also extremely useful.</p>
           </div>
         </div>
       </div>
