--- a/handson/week6.html
+++ b/handson/week6.html
@@ -99,7 +99,6 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
               <h1>CIT 82 - Hands-On Week 6</h1>
-              <span class="subheading">Copy Template and Build site</span>
             </div>
           </div>
         </div>
@@ -111,10 +110,17 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
-
-            <h2 class="section-heading">Heading</h2>
-
-            <p>Placeholder text </p>
+            <h2 class="section-heading">Copy Template and Build site</h2>
+            <p>For week 6 Hands-on, we copied the template that we were going to use to build this site and explored some of the files in the templates that we chose. We then to start building the site from the templates that we chose. </p>
+            <h3>Copy template</h3>
+            <p><a href="https://dloera.github.io/startbootstrap-clean-blog/">https://dloera.github.io/startbootstrap-clean-blog/</a></p>
+            <p>Copying wasn't difficult, as we've done it quite a few times. I like being able to do everything on my local repo and change as much as I like before pushing to my repo online. I like having both sets as a backup, and pushing is pretty intuitive now.</p>
+            <p>My Template has something called 'gulp' on it with a file called 'gulpfile.js'. Turns out this is a plugin that is meant to help automate some of the background processes. <a href="https://gulpjs.com/">https://gulpjs.com/</a></p>
+            <p>My template also has a file with the extension yml, which oddly enough, stands for <a href="https://www.reviversoft.com/file-extensions/yml">YAML ain't markup language</a>. It is meant to create data that is independent of a specific markup language. I think that the file in mine, called ".travis.yml" is meant to dictate what time of programming language will be used.</p>
+            <p>Finally, the last thing I wanted to learn more about on my template was what a <a href="https://todc.github.io/todc-bootstrap/docs/3.3/components/#navbar-masthead">masthead</a> was. It's a pretty simple idea, that i had no clue about, it just relates to navbar headers and allow you to control how the site is seen from a computer or a mobile site. Still have a lot to learn about this.</p>
+            <h3>Build site</h3>
+            <p><a href="https://dloera.github.io/">Here is my website with the template.</a></p>
+            <p>This was pretty interesting. I was able to get the website working with only 6 of the files from the original template: bootstrap.min.css in the vendor/bootstrap/css folder, the all.min.css from the vendorfontawesome-free/css folder, the background image home-bg.jpg in the img folder, and the clean-blog.min.css in the css folder, and then 2 of the webfont "woff" files for the bottom twitter/FB/Github buttons. The only thing that does not quite work on my page is the menu button when the page is narrow (it usually shows all 4 options from a computer with a widened view). Other than that, everything is the same visually. This really shows you that the main gist of the page can be broken down into a handful of files, but that with all of the additional items that exist within the template there are many things that you can do with it. These are not explicitly shown in the original index.html file created for the template, but with a little know-how, can be expanded quite a bit.</p>
           </div>
         </div>
       </div>
