--- a/handson/week7.html
+++ b/handson/week7.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="../img/favicon.ico" type="image/x-icon"/>
-    <title>CIT 82 - Hands-On Week 7 - Create new page and a Menu/title>
+    <title>CIT 82 - Hands-On Week 7 - Create a new page and a Menu</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -64,7 +64,7 @@
                   <a class="dropdown-item" href="week4.html">Week 4 - Git Workflow and CSS Pages</a>
                   <a class="dropdown-item" href="week5.html">Week 5 - Bootstrap, .gitignore, and branching</a>
                   <a class="dropdown-item" href="week6.html">Week 6 - Copy Template and Build site </a>
-                  <a class="dropdown-item" href="week7.html">Week 7 - Create new page and a Menu</a>
+                  <a class="dropdown-item" href="week7.html">Week 7 - Create new page and a menu</a>
                   <a class="dropdown-item" href="week8.html">Week 8 - Image Compression, build page, and Favicon </a>
                 </div>
             </li>
@@ -98,8 +98,7 @@
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
-              <h1>CIT 82 - Hands-On Week 78</h1>
-              <span class="subheading">Create new page and a Menu</span>
+              <h1>CIT 82 - Hands-On Week 7</h1>
             </div>
           </div>
         </div>
@@ -111,10 +110,12 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
-
-            <h2 class="section-heading">Heading</h2>
-
-            <p>Placeholder text </p>
+            <h2 class="section-heading">Create a new page and a Menu</h2>
+            <p>For Week 7, we create a new page based off of our index.html as a template. We then created a menu after choosing what our website topic would be.</p>
+            <h3>Create a new page:</h3>
+            <p><a href="https://dloera.github.io/subpage.html">Here's my subpage.</a> The instructions aren't very explicit about what is required for this, including the video. I removed the post previews, inserted the older posts button by itself, and added the subpage to the top menu and changed the page header and title.</p>
+            <h3>Create a menu:</h3>
+            <p>I really thought I did this on Wednesday with the rest of my work. Oh well. I will be doing the topic of the class. My menu is a dropdown menu, which I looked up how to do on the bootstrap website, and copied the html from there. I will have 3 main topics, lecture, hands-on, and current topics. One for each week. There will be a total of 26 pages, 8 for each of the 3 main topics, 1 home page, and 1 about me page. I created the week pages for each of the main topics already, so the links should be clickable, but there is yet to be any content that I have written for each week. I finished everything Wednesday Night night if you look at my <a href="https://github.com/dloera/dloera.github.io/commit/a991d26253eb5ba8575b6b68aa56c17c3ae7e58d">commits</a>. I must have not posted my reply, though I know that I wrote one.&nbsp;<a href="https://dloera.github.io/">Here is my website</a></p>
           </div>
         </div>
       </div>
