--- a/handson/week8.html
+++ b/handson/week8.html
@@ -99,7 +99,6 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
               <h1>CIT 82 - Hands-On Week 8</h1>
-              <span class="subheading">Image Compression, build page, and Favicon</span>
             </div>
           </div>
         </div>
@@ -112,9 +111,17 @@
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
 
-            <h2 class="section-heading">Heading</h2>
-
-            <p>Placeholder text </p>
+            <h2 class="section-heading">Image Compression, build page, and Favicon</h2>
+            <p>For week 8 of Hands-On, we dealt with how to compress an image, start building out our pages, and how to add a Favicon to the site, which you can see at the browser tab</p>
+            <h3>Online Image Compression</h3>
+            <p>I am doing the topic of the class, and figured I would try to make some of the images topical. Here are my two images. If you click on them they will take you to my respective web page that I use them on. The Github image is PNG and reduced by 18%, or about 156 KB, and the Bootstrap image is a jpeg and reduced by 35%, or about 32KB.</p>
+            <p>Bootstrap image:</p>
+            <p><a href="https://dloera.github.io/lectures/week5.html"><img src="https://raw.githubusercontent.com/dloera/dloera.github.io/master/img/Bootstrap-min.jpg" width="370" height="208" /></a></p>
+            <p>Github Image:</p>
+            <p><a href="https://dloera.github.io/handson/week2.html"><img src="https://raw.githubusercontent.com/dloera/dloera.github.io/master/img/github-min.png" width="462" height="260" /></a></p>
+            <br>
+            <h3>Build page out and Favicon</h3>
+            <p>Here is my <a href="https://dloera.github.io/">website</a> so far. I have the menu and html files created, I just have to write everything down about the topics/lectures for the class. I'll use what I wrote in the posts and my notes as a template, but try to expand on it a bit and stylize it with pictures and videos. This was interesting learning about Favicons, always wondered about it just never looked it up.</p>
           </div>
         </div>
       </div>
