--- a/current/week4.html
+++ b/current/week4.html
@@ -92,7 +92,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('../img/home-bg.jpg')">
+    <header class="masthead" style="background-image: url('../img/unicode-UTF8.jpg')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
