--- a/handson/index.html
+++ b/handson/index.html
@@ -54,7 +54,7 @@
                 </div>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="index.html" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="index.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Hands-On
                 </a>
                 <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
@@ -99,7 +99,7 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
               <h1>CIT 82 - Fall 2018</h1>
-              <span class="subheading">Current Topics</span>
+              <span class="subheading">Hands-On</span>
             </div>
           </div>
         </div>
@@ -113,8 +113,15 @@
           <div class="col-lg-8 col-md-10 mx-auto">
 
             <h2 class="section-heading">Heading</h2>
-
-            <p>Placeholder text </p>
+            <p>Here are the topics:</p>
+            <p><a href="week1.html">Week 1 - Markdown</a></p>
+            <p><a href="week2.html">Week 2 - HTTP and Github Pages</a></p>
+            <p><a href="week3.html">Week 3 - Editor and Github Repos </a></p>
+            <p><a href="week4.html">Week 4 - Git Workflow and CSS Pages</a></p>
+            <p><a href="week5.html">Week 5 - Bootstrap, .gitignore, and branching</a></p>
+            <p><a href="week6.html">Week 6 - Copy Template and Build site </a></p>
+            <p><a href="week7.html">Week 7 - Create new page and a menu</a></p>
+            <p><a href="week8.html">Week 8 - Image Compression, build page, and Favicon </a></p>
           </div>
         </div>
       </div>
