--- a/about.html
+++ b/about.html
@@ -43,8 +43,8 @@
                   Lectures
                 </a>
                 <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="lectures/week7.html">Week 7 - Learn SEO, CMS, and Payments </a>
-                  <a class="dropdown-item" href="lectures/week8.html">Week 8 - eCommerce and the Cloud </a>
+                  <a class="dropdown-item" href="lectures/week7.html">Week 7 - Content Management Systems </a>
+                  <a class="dropdown-item" href="lectures/week8.html">Week 8 - eCommerce </a>
                 </div>
             </li>
             <li class="nav-item dropdown">
