--- a/lectures/index.html
+++ b/lectures/index.html
@@ -44,8 +44,8 @@
                 </a>
                 <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
 
-                  <a class="dropdown-item" href="week7.html">Week 7 - Learn SEO, CMS, and Payments </a>
-                  <a class="dropdown-item" href="week8.html">Week 8 - eCommerce and the Cloud </a>
+                  <a class="dropdown-item" href="week7.html">Week 7 - Content Management Systems </a>
+                  <a class="dropdown-item" href="week8.html">Week 8 - eCommerce </a>
                 </div>
             </li>
             <li class="nav-item dropdown">
@@ -112,8 +112,8 @@
               <br>
               Here are the topics I will be covering:
             </p>
-            <p><a href="week7.html">Week 7 - Learn SEO, CMS, and Payments </a></p>
-            <p><a href="week8.html">Week 8 - eCommerce and the Cloud </a></p>
+            <p><a href="week7.html">Week 7 - Content Management Systems </a></p>
+            <p><a href="week8.html">Week 8 - eCommerce </a></p>
           </div>
         </div>
       </div>
