--- a/lectures/week7.html
+++ b/lectures/week7.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="../img/favicon.ico" type="image/x-icon"/>
-    <title>CIT 82 - Lectures Week 7- Learn SEO, CMS, and Payments</title>
+    <title>CIT 82 - Lectures Week 7- Content Management Systems</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -44,8 +44,8 @@
                 </a>
                 <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
 
-                  <a class="dropdown-item" href="week7.html">Week 7 - Learn SEO, CMS, and Payments</a>
-                  <a class="dropdown-item" href="week8.html">Week 8 - eCommerce and the Cloud </a>
+                  <a class="dropdown-item" href="week7.html">Week 7 - Content Management Systems</a>
+                  <a class="dropdown-item" href="week8.html">Week 8 - eCommerce </a>
                 </div>
             </li>
             <li class="nav-item dropdown">
@@ -105,19 +105,18 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
-            <h2 class="section-heading">Learn SEO, CMS, and Payments</h2>
-            <p>For Week 7 of the Lecture, we watched videos about Search Engine Optimization (SEO), Content Management Systems, and ways to accept payment on a site (paypal, square, stripe, etc.)</p>
-            <h3>Learn SEO:</h3>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/A8EI6JaFbv4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> <br>
-            <p><a href="https://github.com/CIT82/douglas_private/blob/master/SEO.md">My Notes</a></p>
-            <h3>Content Management Systems:</h3>
+            <h2 class="section-heading">Content Management Systems</h2>
+           <h3>Content Management Systems: Wordpress and Squarespace</h3>
+           <p>Here is the video that we watched regarding it:</p>
             <iframe width="364" height="205" src="https://www.youtube.com/embed/MvJVkvPIe4k" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> <br>
-            <h3>How to take Payments:</h3>
-            <p><a href="https://github.com/CIT82/douglas_private/blob/master/Lectures/CMS.md">My Notes</a></p>
-            <iframe width="425" height="344" src="https://www.youtube.com/embed/4vJh0pf4SrY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-            <p><a href="https://github.com/CIT82/douglas_private/blob/master/Lectures/payments.md">My Notes</a></p>
-            <p></p>
-            <h3></h3>
+            <p>My take on it:</p>
+            <h4>Squarespace</h4> <img src="../img/squarespace.jpg">
+            <p>
+              Squarespace is a website-platform builder hosted on Squarespace servers directly. The service can cost anywhere from $8 to $24 per month for the server. It is a tool to build a website, from a blank canvass all the way to a full web-page. The service is about building beautiful modern web pages. The type of webpage is not limited to a specific type of site, as you can build a blog, e-commerce site, etc. While you don't control the site directly, the ease of use is a major advantage for a person who does not the intricacies of HTML/CSS/JS. Most designs are similar, and customization is limited. This makes great for a person who is not able to design everything directly. They have a Free Trial where you can use their themes/templates as a building block, and then you choose the goal of the site. Starter page uses blocks to add content. It is easy to use and includes services such as the ability to create a logo.</p>
+              <h4>Wordpress</h4> <img src="../img/wordpress.png">
+              <p>
+                Worpress is more along the lines of an open source software for a website. It takes some know-how to be able to use it, but you can build the website on top of their software. You manage the content of the site directly. Whilte it is free to use, the web hosting through wordpress can be $5-$10. While Squarespace is an all-in-one platform including hosting/images/blocks/etc, Wordpress is more along a software utility where you can control the content yourself. Wordpress originally started as a blog, and has expanded through the years. Plugins help with being able to control how your content is viewed. Where Squarespace seems to spoon-feed you how to build a website, Wordpress lets you control the content more effectively.
+              </p>
           </div>
         </div>
       </div>
