--- a/lectures/week8.html
+++ b/lectures/week8.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="../img/favicon.ico" type="image/x-icon"/>
-    <title>CIT 82 - Lectures Week 8 - eCommerce and the Cloud</title>
+    <title>CIT 82 - Lectures Week 8 - eCommerce</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -44,8 +44,8 @@
                 </a>
                 <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
 
-                  <a class="dropdown-item" href="week7.html">Week 7 - Learn SEO, CMS, and Payments</a>
-                  <a class="dropdown-item" href="week8.html">Week 8 - eCommerce and the Cloud</a>
+                  <a class="dropdown-item" href="week7.html">Week 7 - Content Management Systems</a>
+                  <a class="dropdown-item" href="week8.html">Week 8 - eCommerce</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
@@ -94,7 +94,7 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
               <h1>CIT 82 - Lectures Week 8</h1>
-              <span class="subheading">eCommerce and the Cloud</span>
+              <span class="subheading">eCommerce</span>
             </div>
           </div>
         </div>
@@ -106,16 +106,23 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
-            <h2 class="section-heading">eCommerce and the Cloud</h2>
-            <p>For Week 8, we covered some of the basic concepts of scoping an eCommerce website, and then some of the basic Tenets of Cloud Computing</p>
+            <h2 class="section-heading">eCommerce</h2>
+            <p>The Lynda.com lecture below discussed the processes of scoping out a project.</p>
             <h3>ECommerce:</h3>
             <p><a href="https://www.lynda.com/Web-Development-tutorials/Ecommerce-Scoping-Projects/594457-2.html">Here is the Lynda.com lecture regarding scoping eCommerce projects</a></p>
-            <a href="https://github.com/CIT82/douglas_private/blob/master/Lectures/ecommerce.md">And my notes</a>
-            <h3>Cloud Computing:</h3>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/usYySG1nbfI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> <br>
-            <p>
-              <a href="https://github.com/CIT82/douglas_private/blob/master/Lectures/cloud.md">And my notes</a>
-            </p>
+            <h2>My take on it:</h2>
+            <h4>scoping projects:</h4>
+            <p>This is the process of Planning a project before you build it. You must get a clear understanding from the client as to what is desired in a product. Costs can be greater when you must fix a product, instjust of building it correctly the first time. Scaling is important, but being clear in what is desired is important as well. Words have different meanings for different people, so if needed, clarify what a client is seeking rather than assuming. Clarification clears the air from the beginning, so that everytone is on the same page. When planning a project, consider 3 things: Will it be fast, good, and/or cheap. You must choose 2 of the 3 for the client to decide what is important. Cannot have all 3</p>
+            <h4>Different Project Strategies</h4>
+            <p>Waterfall is where there is a list of tasks, in order, that must be completed one by one. It is a linear process, and the biggest problem is if you overlook one problem, it can cause issues down the line. Multi-phase is breaking down the project in to two or more waterfalls, by design. This can help break down a product into subproducts to be developed at the same time by separate developers. Minimum Viable Product (MVP) is the baseline for what a client will accept. The Site can start out simply (for the sake of cost), and the complexity can be built up in time. </p>
+            <h4>Discovery</h4>
+            <p>There are different things to consider in this: What type of product will the merchant be selling? Physical, Digital, or a Service. Is the product ready to go, or does it take time to build. A physical product takes time to ship, which also needs to be discussed. If it is a physical product, then details about the product must be known and provided in a CSV file including dimensions/color/images/etc. If it is a software, what type of licensing requirements are there?</p>
+            <p>Quantity of the product can also be important. If there is one or a few products to be sold, customizing the pages can be useful and save time. While if there are 100+ products, then the site would need to be built on a template with a CSV file provided by the client, and the client will need to know what is expected of them.</p>
+            <p>Access to the clients servers is a requirement. If they are not providing you with the tools that you need, then why are you working for them? You will need Admin access to update the site, access to their domain registrars, their hosts, google analytics. Also consider vendor access.</p>
+            <p>Red flags when discussing details, consider if they have out-of-date software, which may be an issue as software may no longer be support and cause issues. If software needs to be updated, discuss with the client. Charge them for upgrading the software as needed. If they are using a low-quality host, then this can cause issues with how the website will be seen/loaded.</p>
+            <p>Scaling issues can be an issue that needs to be considered. Client will care about the number of products, traffic on a good host will update your needs as they grow. A bad host will not take your needs into consideration and can cause issues. Sessions hve to remember who the user is, and checkout can be an issue if the business grows quickly.</p>
+            <p>Payment needs for the client can be an issue. New merchants can be overwhelming, and usin paypal/amazon/apple pay, etc. lets customers use their existing accounts, but can often cost more. Credit cards a necessary, but it really depends on who will be using the site.</p>
+            <p>Shipping needs can be an issue, if the client does not know what is entailed in your service. While you can provide the site, they will need to deal with shipping themselves, unless otherwise specified.</p>
           </div>
         </div>
       </div>
