--- a/lectures/week8.html
+++ b/lectures/week8.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="../img/favicon.ico" type="image/x-icon"/>
-    <title>CIT 82 - Lectures Week 8 - eCommerce</title>
+    <title>CIT 82 - Lectures Week 8 - Scoping eCommerce Projects</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -45,7 +45,7 @@
                 <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
 
                   <a class="dropdown-item" href="week7.html">Week 7 - Content Management Systems</a>
-                  <a class="dropdown-item" href="week8.html">Week 8 - eCommerce</a>
+                  <a class="dropdown-item" href="week8.html">Week 8 - Scoping eCommerce Projects</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
@@ -94,7 +94,7 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
               <h1>CIT 82 - Lectures Week 8</h1>
-              <span class="subheading">eCommerce</span>
+              <span class="subheading">Scoping eCommerce Projects</span>
             </div>
           </div>
         </div>
@@ -106,7 +106,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
-            <h2 class="section-heading">eCommerce</h2>
+            <h2 class="section-heading">Scoping eCommerce Projects</h2>
             <p>The Lynda.com lecture below discussed the processes of scoping out a project.</p>
             <h3>ECommerce:</h3>
             <p><a href="https://www.lynda.com/Web-Development-tutorials/Ecommerce-Scoping-Projects/594457-2.html">Here is the Lynda.com lecture regarding scoping eCommerce projects</a></p>
