--- a/handson/week6.html
+++ b/handson/week6.html
@@ -45,7 +45,7 @@
                 <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
 
                   <a class="dropdown-item" href="../lectures/week7.html">Week 7 - Content Management Systems </a>
-                  <a class="dropdown-item" href="../lectures/week8.html">Week 8 - eCommerce </a>
+                  <a class="dropdown-item" href="../lectures/week8.html">Week 8 - Scoping eCommerce Projects </a>
                 </div>
             </li>
             <li class="nav-item dropdown">
